k8s/06-product-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: product-service
  namespace: shopwave
  labels:
    app: product-service
spec:
  type: ClusterIP
  selector:
    app: product-service
  ports:
    - name: http
      port: 80
      targetPort: http
