k8s/08-cart-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: cart-service
  namespace: shopwave
  labels:
    app: cart-service
spec:
  type: ClusterIP
  selector:
    app: cart-service
  ports:
    - name: http
      port: 80
      targetPort: http
